--- a/index.htm
+++ b/index.htm
@@ -748,6 +748,24 @@ http://www.tooplate.com/view/2098-health
                   });
               });
           });
+          
+          // Programmatic binding for toggleMenu
+        function toggleMenu() {
+            console.log('toggleMenu called');
+            const checkbox = document.querySelector('.hamburger-icon input');
+            const menu = document.querySelector('.menu-space');
+            if (checkbox && menu) {
+                menu.classList.toggle('active', checkbox.checked);
+            } else {
+                console.error('Checkbox or menu not found');
+            }
+        }
+
+        // Bind the event
+        $('#hamburger-checkbox').on('change', function() {
+            console.log('Checkbox changed');
+            toggleMenu();
+        });
       </script>
 
 </body>
