--- a/index.htm
+++ b/index.htm
@@ -76,7 +76,7 @@ http://www.tooplate.com/view/2098-health
                               <div class="col-md-offset-1 col-md-10">
                               <h3>Bringing Stories to Life</h3>
                               <h1>Publishing Excellence</h1>
-                              <p>At [Publishing Company], we pride ourselves on bringing captivating stories to readers across the globe. Our books span multiple genres, offering something for every kind of reader.</p>
+                              <p>At A-D Kay Publications, we pride ourselves on bringing captivating stories to readers across the globe. Our books span multiple genres, offering something for every kind of reader.</p>
                               <a href="#team" class="section-btn btn btn-blue smoothScroll">Meet Our Authors</a>
                               </div>
                          </div>
